[refactor] - Use valueOf() introduced in Java 5.